fixed bug where confirmation message was not centered

--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.css
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.css
@@ -10,4 +10,5 @@
 
 .confirm-message-center{
     font-size: 15px;
+    text-align: center;
 }
